# deck

./: Cargo.toml  README.md  crates.dot
concepts/: build-systems.md  building-package-outputs.md  caching-source-downloads.md  derivation.toml  displaying-progress.md  id-path-equivalence.md  managing-mutable-fs.md  musings.md  organization.md  scheduling-work-redux.md  scheduling-work.md  store-api.md  store-directory-ops.md
concepts/package-files/: gnu-derivation.toml  rust-derivation.toml
concepts/package-files/gluon/: channels.glu  deck.glu  example-package.glu  prelude.glu  stable.glu
concepts/package-files/toml/: example-build-system.toml  example-manifest.toml  example-workspace.toml
deck/: Cargo.toml
deck-binary-cache/: Cargo.toml
deck-binary-cache/src/: lib.rs  local.rs  s3.rs
deck-client/: Cargo.toml
deck-client/src/: lib.rs
deck-core/: Cargo.toml
deck-core/src/: hash.rs  id.rs  lib.rs  manifest.rs  name.rs  platform.rs  spec.rs
deck-core/src/id/: manifest.rs  output.rs  source.rs
deck-core/src/manifest/: outputs.rs
deck-core/src/spec/: manifest.rs
deck-daemon/: Cargo.toml
deck-daemon/src/: config.rs  lib.rs
deck-daemon/tests/: store_api.rs
deck-protocol/: Cargo.toml  build.rs
deck-protocol/proto/daemon/v1alpha1/: build_manifest.proto  daemon.proto  get_build_log.proto  get_transaction_diff.proto  verify.proto
deck-protocol/proto/deck-binary-cache/: binary-cache.proto
deck-protocol/proto/deck-builder/: builder.proto
deck-protocol/proto/deck-core/: build-package.proto  core.proto  get-build-log.proto  query-package.proto
deck-protocol/proto/deck-daemon/: daemon.proto
deck-protocol/src/: lib.rs
deck-repository/: Cargo.toml
deck-repository/src/: lib.rs
deck-store/: Cargo.toml  diesel.toml  organization.md
deck-store/deck-binary-cache/: Cargo.toml
deck-store/deck-repository/: Cargo.toml
deck-store/diagrams/: builder-build-graph.dot  builder-dep-graph.dot
deck-store/examples/: create_manifest.rs
deck-store/src/: binary_cache.rs  builder.rs  closure.rs  context.rs  fs.rs  hash.rs  id.rs  lib.rs  local.rs  package.rs  platform.rs  progress.rs  repo.rs  store.rs
deck-store/src/binary_cache/backends/: local.rs  mod.rs  s3.rs  ssh.rs
deck-store/src/builder/: futures.rs  job.rs
deck-store/src/builder/job/: build_manifest.rs  fetch_output.rs  fetch_source.rs
deck-store/src/fs/: dir.rs
deck-store/src/fs/dir/: path.rs
deck-store/src/fs/fetcher/: git.rs
deck-store/src/id/: manifest.rs  mod.rs  name.rs  output.rs  source.rs  store.rs
deck-store/src/local/: builder.rs  context.rs  dir.rs  store_dir.rs
deck-store/src/local/builder/: futures.rs  job.rs
deck-store/src/local/builder/job/: build_manifest.rs  fetch_output.rs  fetch_source.rs
deck-store/src/local/dir/: path.rs  state.rs
deck-store/src/local/fs/: fetcher.rs  file.rs
deck-store/src/local/fs/dir/: manifests.rs  outputs.rs  sources.rs
deck-store/src/local/fs/fetcher/: uri.rs
deck-store/src/local/store_dir/: manifests.rs  outputs.rs  sources.rs
deck-store/src/package/: manifest.rs  mod.rs  outputs.rs  sources.rs
deck-store/src/store/: builder.rs  closure.rs  context.rs  fs.rs  job.rs  mod.rs  progress.rs
deck-store/src/store/builder/: futures.rs  job.rs
deck-store/src/store/builder/job/: build_manifest.rs  fetch_output.rs  fetch_source.rs
deck-store/src/store/fs/: closure.rs  dir.rs  fetcher.rs  file.rs  mod.rs  state.rs
deck-store/src/store/fs/dir/: manifests.rs  mod.rs  outputs.rs  path.rs  sources.rs
deck-store/src/store/fs/fetcher/: git.rs  mod.rs  uri.rs
deck-store/src/store/job/: build_manifest.rs  fetch_output.rs  fetch_source.rs  mod.rs  progress.rs
deck-store/src/store/remote/: mod.rs
deck-store/src/store_old/: mod.rs  ssh.rs
deck-store/src/store_old/local/: mod.rs
deck-store/src/store_old/local/dir/: error.rs  mod.rs
deck-store/store/manifests/: hello  hello@1.0.0-2dtf5fwo24oq73467u2bztqbhlduknyt  hello@1.0.0-o65bqrchpdeod7xnskjx6gmhfppq6xtv  hello@1.0.0-xpyrto6ighxc4gfhxrexzcrlcdaipars
deck/src/: commands.rs  main.rs
deck/src/commands/: build.rs  completion.rs  install.rs  list.rs  log.rs  package.rs  profile.rs  remove.rs  revert.rs  search.rs  update.rs  upgrade.rs  verify.rs
src/: lib.rs  license.rs  package_id.rs  package_id_spec.rs
src/manifest/: build_system.rs  deps.rs  features.rs  mod.rs  source.rs
