[package]
name = "deck"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Declarative system package manager"
license = "MIT OR Apache-2.0"

[dependencies]
failure = { version = "0.1.1", features = ["derive"] }
license-exprs = "1.3.0"
ron = "0.2.2"
semver = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.66", features = ["derive"] }
url = "1.7.0"
url_serde = "0.2.0"
