[package]
name = "deck-binary-cache"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Library for interfacing with Deck binary caches"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.12"
rusoto_s3 = { version = "0.35.0", optional = true }

[dependencies.deck-core]
path = "../deck-core"

[features]
default = ["s3", "ssh"]
local = []
s3 = ["rusoto_s3"]
ssh = []
