[package]
name = "deck-client"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "High-level abstraction for Deck command-line tools"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies.deck-binary-cache]
path = "../deck-binary-cache"
features = ["local", "s3", "ssh"]
optional = true

[dependencies.deck-protocol]
path = "../deck-protocol"
optional = true

[dependencies.deck-repository]
path = "../deck-repository"
optional = true

[dependencies.deck-store]
path = "../deck-store"
features = ["local", "ssh"]
optional = true

[features]
default = ["deck-binary-cache", "deck-repository", "deck-store"]
multi-user-mode = ["deck-protocol"]
