[package]
name = "deck-daemon"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]

[dependencies]
fnv = "1.0"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.1"
toml = "0.4"

[dependencies.deck-protocol]
path = "../deck-protocol"

[dependencies.deck-store]
path = "../deck-store"
features = ["local"]
