[package]
name = "deck-daemon"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Daemon for managing the global Deck store in multi-user mode"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
fnv = "1.0.6"
futures = "0.1.25"
serde = { version = "1.0.88", features = ["derive"] }
tokio = "0.1.15"
toml = "0.4.10"

[dependencies.deck-binary-cache]
path = "../deck-binary-cache"
features = ["local", "s3", "ssh"]

[dependencies.deck-protocol]
path = "../deck-protocol"

[dependencies.deck-store]
path = "../deck-store"
features = ["local", "ssh"]

[dependencies.deck-repository]
path = "../deck-repository"
