[package]
name = "deck-protocol"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Protocol for communication with the Deck daemon"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bytes = "0.4.12"
prost = "0.5.0"
prost-derive = "0.5.0"
prost-types = "0.5.0"

[dependencies.tower-grpc]
git = "https://github.com/tower-rs/tower-grpc"

[build-dependencies]
prost-build = "0.5.0"

[build-dependencies.tower-grpc-build]
git = "https://github.com/tower-rs/tower-grpc"
