[package]
name = "deck-store"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]

[features]
default = ["s3", "ssh"]
local = ["diesel", "diesel_migrations"]
s3 = ["rusoto_s3"]
ssh = []

[dependencies]
chrono = "0.4.6"
filetime = "0.2.4"
fs2 = "0.4.3"
futures = "0.1.25"
futures-locks = "0.3.0"
hyper = "0.12.16"
hyper-tls = "0.3.1"
ignore = "0.4.4"
rusoto_s3 = { version = "0.35.0", optional = true }
serde = { version = "1.0.80", features = ["derive"] }
tokio = "0.1.13"
toml = "0.4.10"
url = "1.7.2"

[dependencies.diesel]
version = "1.3.3"
features = ["sqlite"]
optional = true

[dependencies.diesel_migrations]
version = "1.3.0"
optional = true
